--- a/.github/workflows/terraform-packer.yml
+++ b/.github/workflows/terraform-packer.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_region: "ap-south-1"
+          aws-region: "ap-south-1"
 
       # Step 3: Install Terraform
       - name: Set up Terraform
